data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2450.wast
;; 1. **Test Description**: Create a test block that defines a simple count loop and includes an erroneous backward jump within the `block`. This jump should be targeting an index that does not correctly reset the stack state, causing mismatches in the WebAssembly but handled in `wizard_engine` due to `resetInit`.    - **Constraint Checked**: Proper state management and stack resetting.    - **Relation to CFG**: The incorrect backward jump affects the intended CFG, potentially causing an infinite loop or stack underflow.

(assert_invalid
  (module (func $incorrect-backward-jump
    (block (loop (br 1)) (i32.const 1))
  ))
  "type mismatch"
)